# django-scheduled-tasks

./: .gitignore  pyproject.toml
.github/workflows/: auto-release.yml  ci.yml  publish.yml
dev/: apps.py  settings.py  tasks.py
django_scheduled_tasks/: base.py  models.py
django_scheduled_tasks/migrations/: 0002_scheduledtaskrunlog_last_scheduled_run_time_and_more.py
tests/: settings.py  test_task_scheduler.py  urls.py  wsgi.py
